Fix ShadedClassLoader